# pysub

./: main.py  pyproject.toml  requirements.txt
schemas/: pysub.schema.json
