[project]
name = "pysub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.14.1",
    "attrs==26.1.0",
    "audioop-lts>=0.2.2",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "configargparse>=1.7.5",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.5.6",
    "decorator==5.3.1",
    "distro==1.9.0",
    "faster-whisper>=1.2.1",
    "filelock==3.29.4",
    "fsspec==2026.6.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.18",
    "imageio==2.37.3",
    "imageio-ffmpeg==0.6.0",
    "jinja2==3.1.6",
    "jiter==0.16.0",
    "llvmlite==0.47.0",
    "markupsafe==3.0.3",
    "more-itertools==11.1.0",
    "moviepy==2.2.1",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numba==0.65.1",
    "numpy==2.4.6",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.4.5",
    "nvidia-nvtx-cu12==12.8.90",
    "openai==1.86.0",
    "pillow==11.3.0",
    "proglog==0.1.12",
    "pycountry>=26.2.16",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pyrsistent==0.20.0",
    "python-dotenv==1.2.2",
    "regex==2026.6.28",
    "requests==2.32.4",
    "setuptools==82.0.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "srt==3.5.3",
    "sympy==1.14.0",
    "tiktoken==0.13.0",
    "toml>=0.10.2",
    "torch==2.10.0",
    "tqdm==4.67.1",
    "triton==3.6.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
]

[tool.ruff.lint]
ignore = ["E501"]

[tool.pylint."messages control"]
disable = ["missing-module-docstring", "missing-function-docstring", "too-many-arguments", "line-too-long", "too-many-positional-arguments", "import-error"]

[tool.mypy]
disable_error_code = ["import-not-found", "import-untyped"]

[dependency-groups]
dev = [
    "python-lsp-server>=1.14.0",
    "types-jsonschema>=4.26.0.20260518",
    "types-pycountry>=24.6.0.20251119",
    "types-requests>=2.33.0.20260518",
    "types-tqdm>=4.68.0.20260608",
]

